Исправление замечаний код ревью #1